[project]
name = "resulve"
version = "0.1.0"
description = "codebase cartographer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "pgvector>=0.3",
    "geoalchemy2>=0.15",
    "shapely>=2.0",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "openai>=1.30",
    "boto3>=1.34",
    "networkx>=3.3",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["resulve"]
